first working multiplayer

--- a/pages/mainMenu.html
+++ b/pages/mainMenu.html
@@ -7,6 +7,6 @@
 <body>
     <h1>Set Game</h1>
     <button onclick='playSingle()'>Play Singleplayer</button>
-    <button>Play Multiplayer (11.99$)</button>
+    <button onclick='playMulti()'>Play Multiplayer (11.99$)</button>
 </body>
 </html>
